kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hotelup-ingress
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        cert-manager.io/cluster-issuer: selfsigned
spec:
    ingressClassName: nginx
    tls:
      - hosts:
          - hotelup.local
        secretName: selfsigned-tls
    rules:
      - host: hotelup.local
      - http:
            paths:
              - path: /api/customer
                pathType: Prefix
                backend:
                    service:
                        name: customer-service
                        port:
                            number: 5000
              - path: /api/repair
                pathType: Prefix
                backend:
                    service:
                        name: repair-service
                        port:
                            number: 5001
              - path: /api/employee
                pathType: Prefix
                backend:
                    service:
                        name: employee-service
                        port:
                            number: 5002
              - path: /api/information
                pathType: Prefix
                backend:
                    service:
                        name: information-service
                        port:
                            number: 5003
              - path: /api/cleaning
                pathType: Prefix
                backend:
                    service:
                        name: cleaning-service
                        port:
                            number: 5004
              - path: /api/kitchen
                pathType: Prefix
                backend:
                    service:
                        name: kitchen-service
                        port:
                            number: 5006
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: frontend-service
                        port:
                            number: 5173
